--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
-    "langchain": "^0.0.204-rc.2",
+    "langchain": "^0.0.204",
     "next": "14.0.1",
     "postcss": "8.4.27",
     "react": "18.2.0",
