--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "node": ">=18"
   },
   "dependencies": {
-    "@langchain/openai": "^0.0.9",
+    "@langchain/community": "^0.0.15",
+    "@langchain/openai": "^0.0.10",
     "@next/bundle-analyzer": "^13.4.19",
     "@supabase/supabase-js": "^2.32.0",
     "@types/node": "20.4.5",
@@ -23,7 +24,7 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
-    "langchain": "^0.0.214",
+    "langchain": "^0.1.0",
     "next": "14.0.1",
     "postcss": "8.4.27",
     "react": "18.2.0",
@@ -38,14 +39,14 @@
     "prettier": "3.0.0"
   },
   "resolutions": {
-    "@langchain/core": "0.1.7"
+    "@langchain/core": "0.1.9"
   },
   "overrides": {
-    "@langchain/core": "0.1.7"
+    "@langchain/core": "0.1.9"
   },
   "pnpm": {
     "overrides": {
-      "@langchain/core": "0.1.7"
+      "@langchain/core": "0.1.9"
     }
   }
 }
