--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "node": ">=18"
   },
   "dependencies": {
+    "@langchain/anthropic": "^0.3.12",
     "@langchain/community": "^0.3.25",
     "@langchain/core": "^0.3.31",
     "@langchain/langgraph": "^0.2.41",
+    "@langchain/langgraph-sdk": "^0.0.36",
     "@langchain/openai": "^0.3.17",
     "@radix-ui/react-checkbox": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.4",
