--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@langchain/community": "^0.3.25",
     "@langchain/core": "^0.3.31",
     "@langchain/langgraph": "^0.2.41",
-    "@langchain/langgraph-sdk": "^0.0.36",
+    "@langchain/langgraph-sdk": "^0.0.45",
     "@langchain/openai": "^0.3.17",
     "@radix-ui/react-checkbox": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.4",
@@ -35,6 +35,7 @@
     "lucide-react": "^0.473.0",
     "next": "^15.1.5",
     "next-themes": "^0.4.4",
+    "nuqs": "^2.3.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-toastify": "^9.1.3",
