--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "langchain-nextjs-template",
+  "name": "ubumuntu-ai",
   "version": "0.0.0",
   "private": true,
+  "description": "A context-aware personal and business assistant for the African context",
   "packageManager": "yarn@3.5.1",
   "scripts": {
     "dev": "next dev",
@@ -14,15 +15,20 @@
     "node": ">=18"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.19.4",
     "@langchain/community": "^0.3.37",
-    "@langchain/core": "^0.3.43",
+    "@langchain/core": "^0.3.56",
+    "@langchain/google-genai": "^0.2.9",
     "@langchain/langgraph": "^0.2.57",
     "@langchain/langgraph-sdk": "^0.0.60",
     "@langchain/openai": "^0.4.9",
+    "@pinecone-database/pinecone": "^6.0.0",
     "@radix-ui/react-checkbox": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-popover": "^1.1.4",
     "@radix-ui/react-slot": "^1.1.1",
+    "@react-three/drei": "^9.99.0",
+    "@react-three/fiber": "^8.15.16",
     "@supabase/supabase-js": "^2.32.0",
     "@types/node": "20.12.12",
     "@types/react": "18.3.2",
@@ -30,17 +36,18 @@
     "ai": "^3.1.12",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "langchain": "^0.3.19",
+    "langchain": "^0.3.26",
     "lucide-react": "^0.473.0",
-    "next": "^15.2.4",
+    "next": "^14.1.0",
     "next-themes": "^0.4.4",
     "nuqs": "^2.3.2",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-toastify": "^9.1.3",
     "sonner": "^1.7.2",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
+    "three": "^0.176.0",
     "use-stick-to-bottom": "^1.0.44",
     "vaul": "^1.1.2",
     "zod": "^3.23.8",
