--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-dom": "^18.2.0",
     "react-toastify": "^9.1.3",
     "sonner": "^1.7.2",
+    "styled-jsx": "^5.1.2",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.176.0",
@@ -54,10 +55,10 @@
     "zod-to-json-schema": "^3.23.2"
   },
   "devDependencies": {
-    "@next/bundle-analyzer": "^13.4.19",
+    "@next/bundle-analyzer": "^14.1.0",
     "autoprefixer": "10.4.14",
     "eslint": "8.46.0",
-    "eslint-config-next": "13.4.12",
+    "eslint-config-next": "^14.1.0",
     "postcss": "8.4.27",
     "prettier": "^3.4.2",
     "tailwindcss": "3.3.3",
