--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "description": "A context-aware personal and business assistant for the African context",
   "packageManager": "yarn@3.5.1",
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -27,22 +28,27 @@
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-popover": "^1.1.4",
     "@radix-ui/react-slot": "^1.1.1",
-    "@react-three/drei": "^9.99.0",
-    "@react-three/fiber": "^8.15.16",
+    "@radix-ui/react-tabs": "^1.1.12",
+    "@react-three/drei": "^10.0.7",
+    "@react-three/fiber": "^9.1.2",
     "@supabase/supabase-js": "^2.32.0",
-    "@types/node": "20.12.12",
-    "@types/react": "18.3.2",
-    "@types/react-dom": "18.3.0",
+    "@types/node": "^22.15.21",
+    "@types/react": "^19.1.5",
+    "@types/react-dom": "^19.1.5",
+    "@types/three": "^0.176.0",
     "ai": "^3.1.12",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "langchain": "^0.3.26",
     "lucide-react": "^0.473.0",
-    "next": "^14.1.0",
+    "ml-pca": "^4.1.1",
+    "next": "latest",
     "next-themes": "^0.4.4",
     "nuqs": "^2.3.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "plotly.js": "^3.0.1",
+    "react": "latest",
+    "react-dom": "latest",
+    "react-plotly.js": "^2.6.0",
     "react-toastify": "^9.1.3",
     "sonner": "^1.7.2",
     "styled-jsx": "^5.1.2",
@@ -57,12 +63,16 @@
   "devDependencies": {
     "@netlify/plugin-nextjs": "^4.41.3",
     "@next/bundle-analyzer": "^14.1.0",
+    "@types/next": "^9.0.0",
+    "@types/react-plotly.js": "^2.6.3",
+    "@typescript-eslint/eslint-plugin": "^8.32.1",
+    "@typescript-eslint/parser": "^8.32.1",
     "autoprefixer": "10.4.14",
-    "eslint": "8.46.0",
-    "eslint-config-next": "^14.1.0",
+    "eslint": "^9.27.0",
+    "eslint-config-next": "^15.3.2",
     "postcss": "8.4.27",
     "prettier": "^3.4.2",
     "tailwindcss": "3.3.3",
-    "typescript": "5.1.6"
+    "typescript": "latest"
   }
 }
