--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@pinecone-database/pinecone": "^6.0.0",
     "@radix-ui/react-checkbox": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.4",
+    "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-popover": "^1.1.4",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tabs": "^1.1.12",
@@ -45,6 +46,7 @@
     "next": "latest",
     "next-themes": "^0.4.4",
     "nuqs": "^2.3.2",
+    "pdf-lib": "^1.17.1",
     "plotly.js": "^3.0.1",
     "react": "latest",
     "react-dom": "latest",
@@ -57,6 +59,7 @@
     "three": "^0.176.0",
     "use-stick-to-bottom": "^1.0.44",
     "vaul": "^1.1.2",
+    "xlsx": "^0.18.5",
     "zod": "^3.23.8",
     "zod-to-json-schema": "^3.23.2"
   },
