--- a/package.json
+++ b/package.json
@@ -28,14 +28,15 @@
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-popover": "^1.1.4",
+    "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tabs": "^1.1.12",
-    "@react-three/drei": "^10.0.7",
-    "@react-three/fiber": "^9.1.2",
+    "@react-three/drei": "^9.88.17",
+    "@react-three/fiber": "^8.15.11",
     "@types/node": "^22.15.21",
     "@types/react": "^19.1.5",
     "@types/react-dom": "^19.1.5",
-    "@types/three": "^0.176.0",
+    "@types/three": "^0.159.0",
     "ai": "^3.1.12",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -46,6 +47,7 @@
     "next-themes": "^0.4.4",
     "nuqs": "^2.3.2",
     "pdf-lib": "^1.17.1",
+    "pdf-parse": "^1.1.1",
     "plotly.js": "^3.0.1",
     "react": "latest",
     "react-dom": "latest",
@@ -55,7 +57,7 @@
     "styled-jsx": "^5.1.2",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
-    "three": "^0.176.0",
+    "three": "^0.159.0",
     "use-stick-to-bottom": "^1.0.44",
     "vaul": "^1.1.2",
     "xlsx": "^0.18.5",
