trying to fix ingestion on netlify

--- a/netlify.toml
+++ b/netlify.toml
@@ -3,11 +3,16 @@
   publish = ".next"
 
 [functions]
-  external_node_modules = ["styled-jsx", "next/dist/compiled/find-up"]
-  included_files = ["node_modules/styled-jsx/**/*", "node_modules/next/dist/compiled/find-up/**/*"]
+  external_node_modules = ["styled-jsx", "next/dist/compiled/find-up", "pdf-parse"]
+  included_files = ["node_modules/styled-jsx/**/*", "node_modules/next/dist/compiled/find-up/**/*", "node_modules/pdf-parse/**/*"]
 
 [[plugins]]
   package = "@netlify/plugin-nextjs"
+
+# Explicitly configure the PDF extraction function
+[[edge_functions]]
+  path = "/api/retrieval/extract"
+  function = "retrieve-extract"
 
 # Environment variables that must be set on Netlify
 [template.environment]
