trying to fix ingestion on netlify

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-popover": "^1.1.4",
+    "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tabs": "^1.1.12",
@@ -49,6 +50,7 @@
     "pdf-lib": "^1.17.1",
     "pdf-parse": "^1.1.1",
     "plotly.js": "^3.0.1",
+    "plotly.js-dist-min": "^3.0.1",
     "react": "latest",
     "react-dom": "latest",
     "react-plotly.js": "^2.6.0",
