--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
   "dependencies": {
     "@clerk/nextjs": "^6.19.4",
     "@langchain/community": "^0.3.37",
-    "@langchain/core": "^0.3.56",
+    "@langchain/core": "^0.3.57",
     "@langchain/google-genai": "^0.2.9",
     "@langchain/langgraph": "^0.2.57",
     "@langchain/langgraph-sdk": "^0.0.60",
-    "@langchain/openai": "^0.4.9",
+    "@langchain/openai": "^0.5.11",
     "@pinecone-database/pinecone": "^6.0.0",
     "@radix-ui/react-checkbox": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.4",
@@ -38,6 +38,7 @@
     "@types/react": "^19.1.5",
     "@types/react-dom": "^19.1.5",
     "@types/three": "^0.159.0",
+    "@types/uuid": "^10.0.0",
     "ai": "^3.1.12",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -61,9 +62,10 @@
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.159.0",
     "use-stick-to-bottom": "^1.0.44",
+    "uuid": "^11.1.0",
     "vaul": "^1.1.2",
     "xlsx": "^0.18.5",
-    "zod": "^3.22.4",
+    "zod": "^3.25.20",
     "zod-to-json-schema": "^3.23.2"
   },
   "devDependencies": {
