--- a/package.json
+++ b/package.json
@@ -37,11 +37,12 @@
     "@types/node": "^22.15.21",
     "@types/react": "^19.1.5",
     "@types/react-dom": "^19.1.5",
-    "@types/three": "^0.159.0",
+    "@types/three": "^0.176.0",
     "@types/uuid": "^10.0.0",
     "ai": "^3.1.12",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "density-clustering": "^1.3.0",
     "langchain": "^0.3.26",
     "lucide-react": "^0.473.0",
     "ml-pca": "^4.1.1",
@@ -60,7 +61,7 @@
     "styled-jsx": "^5.1.2",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
-    "three": "^0.159.0",
+    "three": "^0.176.0",
     "use-stick-to-bottom": "^1.0.44",
     "uuid": "^11.1.0",
     "vaul": "^1.1.2",
