--- a/netlify.toml
+++ b/netlify.toml
@@ -18,4 +18,5 @@
 [template.environment]
   GOOGLE_API_KEY = "Google API key for Gemini models"
   PINECONE_API_KEY = "Pinecone API key"
-  PINECONE_INDEX = "Name of your Pinecone index" 
+  PINECONE_INDEX = "Name of your Pinecone index"
+  NEXT_PUBLIC_CLERK_AFTER_SIGN_OUT_URL = "Your deployed Netlify app URL (e.g., https://your-app.netlify.app)" 
