--- a/netlify.toml
+++ b/netlify.toml
@@ -14,9 +14,30 @@
   path = "/api/retrieval/extract"
   function = "retrieve-extract"
 
+# Redirect configuration for SPA behavior
+[[redirects]]
+  from = "/sign-in/*"
+  to = "/sign-in/index.html"
+  status = 200
+
+[[redirects]]
+  from = "/sign-up/*"
+  to = "/sign-up/index.html"
+  status = 200
+
+# Catch-all redirect for client-side routing (should be last)
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
+
 # Environment variables that must be set on Netlify
 [template.environment]
   GOOGLE_API_KEY = "Google API key for Gemini models"
   PINECONE_API_KEY = "Pinecone API key"
   PINECONE_INDEX = "Name of your Pinecone index"
-  NEXT_PUBLIC_CLERK_AFTER_SIGN_OUT_URL = "Your deployed Netlify app URL (e.g., https://your-app.netlify.app)" 
+  NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY = "Your Clerk publishable key"
+  CLERK_SECRET_KEY = "Your Clerk secret key"
+  NEXT_PUBLIC_CLERK_AFTER_SIGN_OUT_URL = "Your deployed Netlify app URL (e.g., https://your-app.netlify.app)"
+  NEXT_PUBLIC_CLERK_SIGN_IN_URL = "/sign-in"
+  NEXT_PUBLIC_CLERK_SIGN_UP_URL = "/sign-up" 
