--- a/package.json
+++ b/package.json
@@ -23,14 +23,16 @@
     "@langchain/langgraph": "^0.2.57",
     "@langchain/langgraph-sdk": "^0.0.60",
     "@langchain/openai": "^0.5.11",
-    "@pinecone-database/pinecone": "^6.0.0",
+    "@pinecone-database/pinecone": "^6.0.1",
     "@radix-ui/react-checkbox": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-popover": "^1.1.4",
     "@radix-ui/react-progress": "^1.1.7",
+    "@radix-ui/react-scroll-area": "^1.2.9",
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-switch": "^1.2.5",
     "@radix-ui/react-tabs": "^1.1.12",
     "@react-three/drei": "^9.88.17",
     "@react-three/fiber": "^8.15.11",
@@ -39,16 +41,17 @@
     "@types/react-dom": "^19.1.5",
     "@types/three": "^0.176.0",
     "@types/uuid": "^10.0.0",
-    "ai": "^3.1.12",
+    "ai": "^4.3.16",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "density-clustering": "^1.3.0",
-    "langchain": "^0.3.26",
+    "langchain": "^0.3.27",
     "lucide-react": "^0.473.0",
     "ml-pca": "^4.1.1",
     "next": "latest",
     "next-themes": "^0.4.4",
     "nuqs": "^2.3.2",
+    "openai": "^4.103.0",
     "pdf-lib": "^1.17.1",
     "pdf-parse": "^1.1.1",
     "plotly.js": "^3.0.1",
@@ -59,7 +62,7 @@
     "react-toastify": "^9.1.3",
     "sonner": "^1.7.2",
     "styled-jsx": "^5.1.2",
-    "tailwind-merge": "^2.6.0",
+    "tailwind-merge": "^3.3.0",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.176.0",
     "use-stick-to-bottom": "^1.0.44",
