--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@langchain/langgraph": "^0.2.57",
     "@langchain/langgraph-sdk": "^0.0.60",
     "@langchain/openai": "^0.5.11",
+    "@langchain/pinecone": "^0.2.0",
     "@pinecone-database/pinecone": "^6.0.1",
     "@radix-ui/react-checkbox": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.4",
@@ -73,7 +74,7 @@
     "zod-to-json-schema": "^3.23.2"
   },
   "devDependencies": {
-    "@netlify/plugin-nextjs": "^4.41.3",
+    "@netlify/plugin-nextjs": "^5.11.2",
     "@next/bundle-analyzer": "^14.1.0",
     "@types/next": "^9.0.0",
     "@types/react-plotly.js": "^2.6.3",
