--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "@types/react-dom": "^19.1.5",
     "@types/three": "^0.176.0",
     "@types/uuid": "^10.0.0",
-    "ai": "^4.3.16",
+    "ai": "latest",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "density-clustering": "^1.3.0",
