--- a/package.json
+++ b/package.json
@@ -27,13 +27,18 @@
     "@langchain/openai": "^0.5.11",
     "@langchain/pinecone": "^0.2.0",
     "@pinecone-database/pinecone": "3.0.2",
+    "@radix-ui/primitive": "latest",
+    "@radix-ui/react-alert-dialog": "0.1.7",
     "@radix-ui/react-checkbox": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.4",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-popover": "^1.1.4",
     "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-scroll-area": "^1.2.9",
     "@radix-ui/react-select": "^2.2.5",
+    "@radix-ui/react-separator": "0.1.4",
+    "@radix-ui/react-slider": "^1.3.5",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.5",
     "@radix-ui/react-tabs": "^1.1.12",
@@ -44,9 +49,13 @@
     "@types/react-dom": "^19.1.5",
     "@types/three": "^0.176.0",
     "@types/uuid": "^10.0.0",
+    "aframe": "^1.7.1",
+    "aframe-forcegraph-component": "^3.2.3",
+    "aframe-react": "^4.4.0",
     "ai": "3.0.19",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "d3": "^7.9.0",
     "date-fns": "^4.1.0",
     "density-clustering": "^1.3.0",
     "framer-motion": "^12.15.0",
@@ -65,6 +74,7 @@
     "plotly.js-dist-min": "^3.0.1",
     "react": "latest",
     "react-dom": "latest",
+    "react-force-graph": "^1.47.6",
     "react-markdown": "^10.1.0",
     "react-plotly.js": "^2.6.0",
     "react-toastify": "^9.1.3",
