--- a/package.json
+++ b/package.json
@@ -42,8 +42,10 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.5",
     "@radix-ui/react-tabs": "^1.1.12",
+    "@radix-ui/react-tooltip": "^1.2.7",
     "@react-three/drei": "^9.88.17",
     "@react-three/fiber": "^8.15.11",
+    "@tabler/icons-react": "^3.34.0",
     "@types/node": "^22.15.21",
     "@types/react": "^19.1.5",
     "@types/react-dom": "^19.1.5",
@@ -92,19 +94,29 @@
     "zod-to-json-schema": "^3.23.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.27.4",
+    "@babel/plugin-syntax-import-attributes": "^7.27.1",
+    "@babel/preset-env": "^7.27.2",
+    "@babel/preset-react": "^7.27.1",
+    "@babel/preset-typescript": "^7.27.1",
     "@netlify/plugin-nextjs": "^5.11.2",
     "@next/bundle-analyzer": "^14.1.0",
+    "@next/eslint-plugin-next": "^15.3.3",
     "@tailwindcss/typography": "^0.5.16",
-    "@types/next": "^9.0.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@types/jest": "^29.5.14",
     "@types/react-plotly.js": "^2.6.3",
-    "@typescript-eslint/eslint-plugin": "^8.32.1",
-    "@typescript-eslint/parser": "^8.32.1",
+    "@typescript-eslint/eslint-plugin": "^8.33.1",
+    "@typescript-eslint/parser": "^8.33.1",
     "autoprefixer": "10.4.14",
+    "babel-jest": "^30.0.0-beta.3",
     "eslint": "^9.27.0",
     "eslint-config-next": "^15.3.2",
+    "jest": "^29.7.0",
     "postcss": "8.4.27",
     "prettier": "^3.4.2",
     "tailwindcss": "3.3.3",
-    "typescript": "latest"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.3"
   }
 }
