--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "react-force-graph": "^1.47.6",
     "react-markdown": "^10.1.0",
     "react-plotly.js": "^2.6.0",
+    "react-select": "^5.10.1",
     "react-toastify": "^9.1.3",
     "reactflow": "^11.11.4",
     "sonner": "^1.7.2",
