--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
   "dependencies": {
     "@ai-sdk/langchain": "^1.0.0-canary.12",
     "@clerk/nextjs": "^6.19.4",
-    "@google/genai": "^1.1.0",
+    "@google/genai": "latest",
     "@langchain/community": "^0.3.37",
     "@langchain/core": "^0.3.57",
-    "@langchain/google-genai": "^0.2.9",
+    "@langchain/google-genai": "^0.2.10",
     "@langchain/langgraph": "^0.2.57",
     "@langchain/langgraph-sdk": "^0.0.60",
     "@langchain/openai": "^0.5.11",
@@ -48,6 +48,7 @@
     "@tabler/icons-react": "^3.34.0",
     "@types/node": "^22.15.21",
     "@types/react": "^19.1.5",
+    "@types/react-d3-graph": "^2.6.7",
     "@types/react-dom": "^19.1.5",
     "@types/three": "^0.176.0",
     "@types/uuid": "^10.0.0",
@@ -57,9 +58,12 @@
     "ai": "3.0.19",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cross-fetch": "^4.1.0",
     "d3": "^7.9.0",
     "date-fns": "^4.1.0",
     "density-clustering": "^1.3.0",
+    "firebase": "^11.9.0",
+    "firebase-admin": "^13.4.0",
     "framer-motion": "^12.15.0",
     "isomorphic-fetch": "^3.0.0",
     "langchain": "^0.3.27",
@@ -68,6 +72,7 @@
     "ml-pca": "^4.1.1",
     "next": "latest",
     "next-themes": "^0.4.4",
+    "node-fetch": "^3.3.2",
     "nuqs": "^2.3.2",
     "openai": "^4.103.0",
     "pdf-lib": "^1.17.1",
@@ -75,6 +80,7 @@
     "plotly.js": "^3.0.1",
     "plotly.js-dist-min": "^3.0.1",
     "react": "latest",
+    "react-d3-graph": "^2.6.0",
     "react-dom": "latest",
     "react-force-graph": "^1.47.6",
     "react-markdown": "^10.1.0",
@@ -100,6 +106,7 @@
     "@babel/preset-env": "^7.27.2",
     "@babel/preset-react": "^7.27.1",
     "@babel/preset-typescript": "^7.27.1",
+    "@eslint/js": "^9.28.0",
     "@netlify/plugin-nextjs": "^5.11.2",
     "@next/bundle-analyzer": "^14.1.0",
     "@next/eslint-plugin-next": "^15.3.3",
@@ -107,12 +114,13 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@types/jest": "^29.5.14",
     "@types/react-plotly.js": "^2.6.3",
+    "@types/react-select": "^5.0.1",
     "@typescript-eslint/eslint-plugin": "^8.33.1",
     "@typescript-eslint/parser": "^8.33.1",
     "autoprefixer": "10.4.14",
     "babel-jest": "^30.0.0-beta.3",
     "eslint": "^9.27.0",
-    "eslint-config-next": "^15.3.2",
+    "eslint-config-next": "^15.3.3",
     "jest": "^29.7.0",
     "postcss": "8.4.27",
     "prettier": "^3.4.2",
