--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "description": "A context-aware personal and business assistant for the African context",
   "packageManager": "yarn@3.5.1",
-  "type": "commonjs",
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -121,11 +121,36 @@
     "babel-jest": "^30.0.0-beta.3",
     "eslint": "^9.27.0",
     "eslint-config-next": "^15.3.3",
+    "eslint-plugin-react-hooks": "^5.2.0",
     "jest": "^29.7.0",
     "postcss": "8.4.27",
     "prettier": "^3.4.2",
     "tailwindcss": "3.3.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
+  },
+  "eslintConfig": {
+    "extends": [
+      "next/core-web-vitals",
+      "eslint:recommended",
+      "plugin:@typescript-eslint/recommended"
+    ],
+    "ignores": [
+      "node_modules/**",
+      ".next/**",
+      "dist/**",
+      "build/**",
+      "coverage/**",
+      "*.config.js"
+    ],
+    "rules": {
+      "@typescript-eslint/no-unused-vars": ["error", { 
+        "argsIgnorePattern": "^_",
+        "varsIgnorePattern": "^_",
+        "caughtErrorsIgnorePattern": "^_"
+      }],
+      "no-unused-vars": "off",
+      "react-hooks/exhaustive-deps": "warn"
+    }
   }
 }
