--- a/.gitignore
+++ b/.gitignore
@@ -24,7 +24,10 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-
+# Environment variables
+.env
+.env.local
+.env.*.local
 
 # vercel
 .vercel
@@ -39,7 +42,6 @@ next-env.d.ts
 !.yarn/releases
 !.yarn/sdks
 !.yarn/versions
-.env
 
 # Firebase credentials
 lib/firebase/credentials/service-account.json
