--- a/package.json
+++ b/package.json
@@ -29,10 +29,11 @@
     "@langchain/openai": "^0.5.11",
     "@langchain/pinecone": "^0.2.0",
     "@netlify/functions": "^4.1.5",
-    "@pinecone-database/pinecone": "3.0.2",
+    "@pinecone-database/pinecone": "^6.1.1",
     "@prisma/client": "^6.9.0",
     "@radix-ui/primitive": "latest",
     "@radix-ui/react-alert-dialog": "0.1.7",
+    "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
