--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "lodash": "^4.17.21",
     "lucide-react": "^0.473.0",
     "marked": "^15.0.12",
+    "ml-distance": "^4.0.1",
     "ml-kmeans": "^6.0.0",
     "ml-pca": "^4.1.1",
     "next": "latest",
